# ableton-live-mcp-server

./: .gitignore  LICENSE  README.md  main.py  mcp-osc-server.py  mcp_ableton_server.py  osc-daemon.py  osc_daemon.py  pyproject.toml
